// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textAutospace renders 0 1`] = `
Array [
  .c0 {
  text-autospace: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textAutospace renders function 1`] = `
Array [
  .c0 {
  text-autospace: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textAutospace renders invalid theme path 1`] = `
Array [
  .c0 {
  text-autospace: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textAutospace renders negative number 1`] = `
Array [
  .c0 {
  text-autospace: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textAutospace renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-autospace: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-autospace: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-autospace: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-autospace: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-autospace: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-autospace: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-autospace: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-autospace: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-autospace: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-autospace: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-autospace: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-autospace: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-autospace: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-autospace: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-autospace: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-autospace: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textAutospace renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-autospace: July;
  }
}

@media April {
  .c0 {
    text-autospace: August;
  }
}

@media January {
  .c0 {
    text-autospace: September;
  }
}

@media April {
  .c0 {
    text-autospace: November;
  }
}

@media June {
  .c0 {
    text-autospace: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-autospace: July;
  }
}

@media April {
  .c0 {
    text-autospace: August;
  }
}

@media January {
  .c0 {
    text-autospace: September;
  }
}

@media April {
  .c0 {
    text-autospace: November;
  }
}

@media June {
  .c0 {
    text-autospace: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-autospace: January;
  }
}

@media April {
  .c0 {
    text-autospace: December;
  }
}

@media January {
  .c0 {
    text-autospace: April;
  }
}

@media April {
  .c0 {
    text-autospace: May;
  }
}

@media June {
  .c0 {
    text-autospace: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-autospace: January;
  }
}

@media April {
  .c0 {
    text-autospace: December;
  }
}

@media January {
  .c0 {
    text-autospace: April;
  }
}

@media April {
  .c0 {
    text-autospace: May;
  }
}

@media June {
  .c0 {
    text-autospace: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textAutospace renders postitive number 1`] = `
Array [
  .c0 {
  text-autospace: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textAutospace renders string 1`] = `
Array [
  .c0 {
  text-autospace: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textAutospace renders valid theme path 1`] = `
Array [
  .c0 {
  text-autospace: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-autospace: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
